// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorSearchPageComponent should snap with a search key 1`] = `
<tm-instructor-search-page
  commentTables={[Function Array]}
  courseService={[Function CourseService]}
  isSearching="false"
  route={[Function ActivatedRoute]}
  searchParams={[Function Object]}
  searchService={[Function SearchService]}
  statusMessageService={[Function StatusMessageService]}
  studentsListRowTables={[Function Array]}
>
  <tm-instructor-search-bar>
    <div
      class="card bg-light mb-4"
    >
      <div
        class="card-body"
      >
        <div
          class="text-muted"
        >
           Search Tips:
          <br />
          <ul>
            <li>
              Put more keywords to search for more precise results.
            </li>
            <li>
              Put quotation marks around words 
              <b>
                "[any word]"
              </b>
               to search for an exact phrase in an exact order.
            </li>
          </ul>
        </div>
        <div
          class="form-group"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              id="search-keyword"
              placeholder="Your search keyword"
              type="text"
            />
            <div
              class="input-group-append"
            >
              <button
                class="btn btn-primary"
                id="btn-search"
              >
                Search
              </button>
            </div>
          </div>
          <div
            class="input-group mt-md-1"
          >
            <div
              class="col-md-3"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="students-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="students-checkbox"
              >
                <b>
                  Students
                </b>
              </label>
            </div>
            <div
              class="col-md-9"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="comment-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="comment-checkbox"
              >
                <b>
                  Questions, responses, comments on responses
                </b>
              </label>
            </div>
            <div
              class="invalid-field mt-md-1"
              hidden=""
            >
              <i
                aria-hidden="true"
                class="fa fa-exclamation-circle"
              />
                 Please select at least one search type. 
            </div>
          </div>
        </div>
      </div>
    </div>
  </tm-instructor-search-bar><div>
    
    
  </div>
</tm-instructor-search-page>
`;

exports[`InstructorSearchPageComponent should snap with a student table 1`] = `
<tm-instructor-search-page
  commentTables={[Function Array]}
  courseService={[Function CourseService]}
  isSearching="false"
  route={[Function ActivatedRoute]}
  searchParams={[Function Object]}
  searchService={[Function SearchService]}
  statusMessageService={[Function StatusMessageService]}
  studentsListRowTables={[Function Array]}
>
  <tm-instructor-search-bar>
    <div
      class="card bg-light mb-4"
    >
      <div
        class="card-body"
      >
        <div
          class="text-muted"
        >
           Search Tips:
          <br />
          <ul>
            <li>
              Put more keywords to search for more precise results.
            </li>
            <li>
              Put quotation marks around words 
              <b>
                "[any word]"
              </b>
               to search for an exact phrase in an exact order.
            </li>
          </ul>
        </div>
        <div
          class="form-group"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              id="search-keyword"
              placeholder="Your search keyword"
              type="text"
            />
            <div
              class="input-group-append"
            >
              <button
                class="btn btn-primary"
                disabled=""
                id="btn-search"
              >
                Search
              </button>
            </div>
          </div>
          <div
            class="input-group mt-md-1"
          >
            <div
              class="col-md-3"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="students-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="students-checkbox"
              >
                <b>
                  Students
                </b>
              </label>
            </div>
            <div
              class="col-md-9"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="comment-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="comment-checkbox"
              >
                <b>
                  Questions, responses, comments on responses
                </b>
              </label>
            </div>
            <div
              class="invalid-field mt-md-1"
              hidden=""
            >
              <i
                aria-hidden="true"
                class="fa fa-exclamation-circle"
              />
                 Please select at least one search type. 
            </div>
          </div>
        </div>
      </div>
    </div>
  </tm-instructor-search-bar><div>
    
    <tm-student-result-table>
      <div
        class="card border border-primary mb-4"
      >
        <div
          class="card-header text-white bg-primary font-weight-bold"
        >
          Students
        </div>
        <div
          class="card-body p-3"
        >
          
          <div
            class="card border border-light-blue mb-3 student-course-table"
          >
            <div
              class="card-header alert-primary font-weight-bold"
            >
              [test-exa.demo]
            </div>
            <div
              class="card-body p-0"
            >
              <tm-student-list>
                <div
                  class="table-responsive"
                >
                  <table
                    class="table table-bordered table-striped m-0"
                  >
                    <thead
                      class="thead-gray"
                    >
                      <tr>
                        <th>
                          Photo
                        </th>
                        
                        <th
                          class="sortable-header"
                        >
                           Section 
                          <span
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            
                            
                          </span>
                        </th>
                        <th
                          class="sortable-header"
                        >
                           Team 
                          <span
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            
                            
                          </span>
                        </th>
                        <th
                          class="sortable-header"
                          id="sort-by-name"
                        >
                           Student Name 
                          <span
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            
                            
                          </span>
                        </th>
                        <th
                          class="sortable-header"
                          id="sort-by-status"
                        >
                           Status 
                          <span
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            
                            
                          </span>
                        </th>
                        <th
                          class="sortable-header"
                        >
                           Email 
                          <span
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            
                            
                          </span>
                        </th>
                        <th
                          class="align-center"
                        >
                          Action(s)
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      
                      <tr
                        s=""
                      >
                        <td>
                          <tm-view-photo-popover>
                            
                            
                            
                            <a
                              href="/"
                              queryparamshandling="preserve"
                              role="button"
                            >
                               View Photo 
                            </a>
                            
                            
                            
                          </tm-view-photo-popover>
                        </td>
                        
                        <td>
                          Tutorial Group 1
                        </td>
                        <td>
                          Team 1
                        </td>
                        <td>
                          tester
                        </td>
                        <td>
                          Joined
                        </td>
                        <td>
                          tester@tester.com
                        </td>
                        <td
                          class="no-print align-center"
                        >
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/details?courseid=test-exa.demo&studentemail=tester@tester.com"
                            id="btn-view-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             View
                          </a>
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/edit?courseid=test-exa.demo&studentemail=tester@tester.com"
                            id="btn-edit-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             Edit
                          </a>
                          
                          
                          <button
                            class="btn btn-light btn-sm btn-margin-right"
                            id="btn-delete"
                          >
                            Delete
                          </button>
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/students/records?courseid=test-exa.demo&studentemail=tester@tester.com"
                            id="btn-view-records"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             All Records
                          </a>
                          
                        </td>
                      </tr>
                      <tr
                        s=""
                      >
                        <td>
                          <tm-view-photo-popover>
                            
                            
                            
                            <a
                              href="/"
                              queryparamshandling="preserve"
                              role="button"
                            >
                               View Photo 
                            </a>
                            
                            
                            
                          </tm-view-photo-popover>
                        </td>
                        
                        <td>
                          Tutorial Group 1
                        </td>
                        <td>
                          Team 1
                        </td>
                        <td>
                          Benny Charles
                        </td>
                        <td>
                          Joined
                        </td>
                        <td>
                          benny.c.tmms@gmail.tmt
                        </td>
                        <td
                          class="no-print align-center"
                        >
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/details?courseid=test-exa.demo&studentemail=benny.c.tmms@gmail.tmt"
                            id="btn-view-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             View
                          </a>
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/edit?courseid=test-exa.demo&studentemail=benny.c.tmms@gmail.tmt"
                            id="btn-edit-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             Edit
                          </a>
                          
                          
                          <button
                            class="btn btn-light btn-sm btn-margin-right"
                            id="btn-delete"
                          >
                            Delete
                          </button>
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/students/records?courseid=test-exa.demo&studentemail=benny.c.tmms@gmail.tmt"
                            id="btn-view-records"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             All Records
                          </a>
                          
                        </td>
                      </tr>
                      <tr
                        s=""
                      >
                        <td>
                          <tm-view-photo-popover>
                            
                            
                            
                            <a
                              href="/"
                              queryparamshandling="preserve"
                              role="button"
                            >
                               View Photo 
                            </a>
                            
                            
                            
                          </tm-view-photo-popover>
                        </td>
                        
                        <td>
                          Tutorial Group 1
                        </td>
                        <td>
                          Team 1
                        </td>
                        <td>
                          Alice Betsy
                        </td>
                        <td>
                          Joined
                        </td>
                        <td>
                          alice.b.tmms@gmail.tmt
                        </td>
                        <td
                          class="no-print align-center"
                        >
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/details?courseid=test-exa.demo&studentemail=alice.b.tmms@gmail.tmt"
                            id="btn-view-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             View
                          </a>
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/edit?courseid=test-exa.demo&studentemail=alice.b.tmms@gmail.tmt"
                            id="btn-edit-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             Edit
                          </a>
                          
                          
                          <button
                            class="btn btn-light btn-sm btn-margin-right"
                            id="btn-delete"
                          >
                            Delete
                          </button>
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/students/records?courseid=test-exa.demo&studentemail=alice.b.tmms@gmail.tmt"
                            id="btn-view-records"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             All Records
                          </a>
                          
                        </td>
                      </tr>
                      <tr
                        s=""
                      >
                        <td>
                          <tm-view-photo-popover>
                            
                            
                            
                            <a
                              href="/"
                              queryparamshandling="preserve"
                              role="button"
                            >
                               View Photo 
                            </a>
                            
                            
                            
                          </tm-view-photo-popover>
                        </td>
                        
                        <td>
                          Tutorial Group 1
                        </td>
                        <td>
                          Team 1
                        </td>
                        <td>
                          Danny Engrid
                        </td>
                        <td>
                          Joined
                        </td>
                        <td>
                          danny.e.tmms@gmail.tmt
                        </td>
                        <td
                          class="no-print align-center"
                        >
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/details?courseid=test-exa.demo&studentemail=danny.e.tmms@gmail.tmt"
                            id="btn-view-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             View
                          </a>
                          
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/courses/student/edit?courseid=test-exa.demo&studentemail=danny.e.tmms@gmail.tmt"
                            id="btn-edit-details"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             Edit
                          </a>
                          
                          
                          <button
                            class="btn btn-light btn-sm btn-margin-right"
                            id="btn-delete"
                          >
                            Delete
                          </button>
                          
                          <a
                            class="btn btn-light btn-sm btn-margin-right"
                            href="/web/instructor/students/records?courseid=test-exa.demo&studentemail=danny.e.tmms@gmail.tmt"
                            id="btn-view-records"
                            rel="noopener noreferrer"
                            target="_blank"
                          >
                             All Records
                          </a>
                          
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </tm-student-list>
            </div>
          </div>
        </div>
      </div>
    </tm-student-result-table>
    
  </div>
</tm-instructor-search-page>
`;

exports[`InstructorSearchPageComponent should snap with default fields 1`] = `
<tm-instructor-search-page
  commentTables={[Function Array]}
  courseService={[Function CourseService]}
  isSearching="false"
  route={[Function ActivatedRoute]}
  searchParams={[Function Object]}
  searchService={[Function SearchService]}
  statusMessageService={[Function StatusMessageService]}
  studentsListRowTables={[Function Array]}
>
  <tm-instructor-search-bar>
    <div
      class="card bg-light mb-4"
    >
      <div
        class="card-body"
      >
        <div
          class="text-muted"
        >
           Search Tips:
          <br />
          <ul>
            <li>
              Put more keywords to search for more precise results.
            </li>
            <li>
              Put quotation marks around words 
              <b>
                "[any word]"
              </b>
               to search for an exact phrase in an exact order.
            </li>
          </ul>
        </div>
        <div
          class="form-group"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control ng-untouched ng-pristine ng-valid"
              id="search-keyword"
              placeholder="Your search keyword"
              type="text"
            />
            <div
              class="input-group-append"
            >
              <button
                class="btn btn-primary"
                disabled=""
                id="btn-search"
              >
                Search
              </button>
            </div>
          </div>
          <div
            class="input-group mt-md-1"
          >
            <div
              class="col-md-3"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="students-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="students-checkbox"
              >
                <b>
                  Students
                </b>
              </label>
            </div>
            <div
              class="col-md-9"
            >
              <input
                class="form-check-inline ng-untouched ng-pristine ng-valid"
                id="comment-checkbox"
                type="checkbox"
              />
              <label
                class="form-check-label"
                for="comment-checkbox"
              >
                <b>
                  Questions, responses, comments on responses
                </b>
              </label>
            </div>
            <div
              class="invalid-field mt-md-1"
              hidden=""
            >
              <i
                aria-hidden="true"
                class="fa fa-exclamation-circle"
              />
                 Please select at least one search type. 
            </div>
          </div>
        </div>
      </div>
    </div>
  </tm-instructor-search-bar><div>
    
    
  </div>
</tm-instructor-search-page>
`;
